# indices_view

./: .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml
cmake/: beman.indices_view-config.cmake.in
examples/: CMakeLists.txt  basic_example.cpp  paper_example.cpp
include/beman/indices_view/: indices.hpp
tests/beman/indices_view/: CMakeLists.txt  basic.test.cpp
